iterating with OHIF

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -149,6 +149,9 @@
    },
    "outputs": [],
    "source": [
+    "# TODO: Save training, validation, and hold out uids within raicontours\n",
+    "# Have this downloader be able to receive \"training\", \"validation\", or \"hold out\"\n",
+    "# Have a random one be used per user.\n",
     "image_paths, structure_path = rai.download_hnscc_example()\n",
     "structure_path"
    ]
@@ -268,7 +271,9 @@
    "id": "f8583c07-63ba-4e59-afcc-2d3e55fd887d",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# created_structure_ds.remove_private_tags()"
+   ]
   },
   {
    "cell_type": "code",
@@ -276,7 +281,9 @@
    "id": "39d6ad72-5daa-40e0-a125-29d55f1be20f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# created_structure_ds.ROIContourSequence"
+   ]
   },
   {
    "cell_type": "code",
@@ -284,7 +291,9 @@
    "id": "36ae013a-77c0-411e-8a23-b14855e87715",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# sorted_image_series[0]"
+   ]
   },
   {
    "cell_type": "code",
@@ -292,7 +301,11 @@
    "id": "779dbf42-9118-445e-9688-564b5e00d13a",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "structure_filename = \"RS-RAi.dcm\"\n",
+    "\n",
+    "pydicom.dcmwrite(filename=structure_filename, dataset=created_structure_ds, write_like_original=False)"
+   ]
   },
   {
    "cell_type": "code",
@@ -304,18 +317,12 @@
     "in_memory_file = BytesIO()\n",
     "\n",
     "with ZipFile('results.zip', 'w') as results_zip:\n",
-    "    for ds in sorted_image_series:        \n",
-    "        in_memory_file = BytesIO()\n",
-    "        pydicom.dcmwrite(filename=in_memory_file, dataset=ds, write_like_original=False)\n",
-    "        filename = f\"CT-{ds.SOPInstanceUID}.dcm\"\n",
+    "    for path in image_paths:\n",
+    "        results_zip.write(path, path.name)\n",
+    "\n",
     "        \n",
-    "        in_memory_file.seek(0)\n",
-    "        results_zip.writestr(filename, in_memory_file.read())\n",
-    "        \n",
-    "    in_memory_file = BytesIO()\n",
     "    pydicom.dcmwrite(filename=in_memory_file, dataset=created_structure_ds, write_like_original=False)\n",
-    "    in_memory_file.seek(0)\n",
-    "    results_zip.writestr(\"RS-RAi.dcm\", in_memory_file.read())\n",
+    "    results_zip.write(structure_filename)\n",
     "    "
    ]
   },
@@ -393,46 +400,36 @@
    },
    "outputs": [],
    "source": [
-    "image_uids = [ds.SOPInstanceUID for ds in sorted_image_series]\n",
+    "# image_uids = [ds.SOPInstanceUID for ds in sorted_image_series]\n",
     "\n",
     "\n",
-    "align_map = {\n",
-    "    \"Brain\": [TG263.Brain],\n",
-    "    \"Brainstem\": [TG263.Brainstem],\n",
-    "    \"Cochlea-Lt\": [TG263.Cochlea_L],\n",
-    "    \"Cochlea-Rt\": [TG263.Cochlea_R],\n",
-    "    \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
-    "    \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
-    "    \"Lens-Lt\": [TG263.Lens_L],\n",
-    "    \"Lens-Rt\": [TG263.Lens_R],\n",
-    "    \"Lung-Lt\": [TG263.Lung_L],\n",
-    "    \"Lung-Rt\": [TG263.Lung_R],\n",
-    "    \"Mandible\": [TG263.Bone_Mandible],\n",
-    "    \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
-    "    \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
-    "    \"Orbit-Lt\": [TG263.Eye_L],\n",
-    "    \"Orbit-Rt\": [TG263.Eye_R],\n",
-    "    \"Parotid-Lt\": [TG263.Parotid_L],\n",
-    "    \"Parotid-Rt\": [TG263.Parotid_R],\n",
-    "    \"Spinal-Cord\": [TG263.SpinalCord],\n",
-    "    \"Submandibular-Lt\": [TG263.Glnd_Submand_L],\n",
-    "    \"Submandibular-Rt\": [TG263.Glnd_Submand_R],\n",
-    "}\n",
-    "structure_names = list(align_map.keys())\n",
+    "# align_map = {\n",
+    "#     \"Brain\": [TG263.Brain],\n",
+    "#     \"Brainstem\": [TG263.Brainstem],\n",
+    "#     \"Cochlea-Lt\": [TG263.Cochlea_L],\n",
+    "#     \"Cochlea-Rt\": [TG263.Cochlea_R],\n",
+    "#     \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
+    "#     \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
+    "#     \"Lens-Lt\": [TG263.Lens_L],\n",
+    "#     \"Lens-Rt\": [TG263.Lens_R],\n",
+    "#     \"Lung-Lt\": [TG263.Lung_L],\n",
+    "#     \"Lung-Rt\": [TG263.Lung_R],\n",
+    "#     \"Mandible\": [TG263.Bone_Mandible],\n",
+    "#     \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
+    "#     \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
+    "#     \"Orbit-Lt\": [TG263.Eye_L],\n",
+    "#     \"Orbit-Rt\": [TG263.Eye_R],\n",
+    "#     \"Parotid-Lt\": [TG263.Parotid_L],\n",
+    "#     \"Parotid-Rt\": [TG263.Parotid_R],\n",
+    "#     \"Spinal-Cord\": [TG263.SpinalCord],\n",
+    "#     \"Submandibular-Lt\": [TG263.Glnd_Submand_L],\n",
+    "#     \"Submandibular-Rt\": [TG263.Glnd_Submand_R],\n",
+    "# }\n",
+    "# structure_names = list(align_map.keys())\n",
     "\n",
-    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
-    "    ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df8c92ad-dcd9-4ba7-b32a-d6911965918a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predicted_contours_by_structure = {}"
+    "# dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
+    "#     ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
+    "# )"
    ]
   },
   {
@@ -444,25 +441,18 @@
    },
    "outputs": [],
    "source": [
-    "predicted_contours_by_structure[\"transverse\"] = rai.masks_to_contours_by_structure(\n",
-    "    grids=grids, \n",
-    "    masks=predicted_masks, \n",
-    "    structure_names=cfg[\"structures\"], \n",
-    "    orientation=\"transverse\",\n",
-    ")\n",
+    "# aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
+    "#     predicted_contours_by_structure, align_map\n",
+    "# )\n",
     "\n",
-    "aligned_predicted_contours_by_structure = rai.merge_contours_by_structure(\n",
-    "    predicted_contours_by_structure[\"transverse\"], align_map\n",
-    ")\n",
-    "\n",
-    "dice = {}\n",
-    "for name in align_map:\n",
-    "    dice[name] = rai.dice_from_contours_by_slice(\n",
-    "        dicom_contours_by_structure[name],\n",
-    "        aligned_predicted_contours_by_structure[name],\n",
-    "    )\n",
+    "# dice = {}\n",
+    "# for name in align_map:\n",
+    "#     dice[name] = rai.dice_from_contours_by_slice(\n",
+    "#         dicom_contours_by_structure[name],\n",
+    "#         aligned_predicted_contours_by_structure[name],\n",
+    "#     )\n",
     "    \n",
-    "dice"
+    "# dice"
    ]
   },
   {
@@ -475,71 +465,6 @@
     "# TODO:\n",
     "# * Calculate and display hausdorff\n",
     "# * Turn into DICOM file, use online web DICOM viewer to view the file"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f2825fb9-ab73-4e3e-b7fe-a0e0ddaeb25f",
-   "metadata": {
-    "id": "f2825fb9-ab73-4e3e-b7fe-a0e0ddaeb25f"
-   },
-   "outputs": [],
-   "source": [
-    "# vmin = 0.2\n",
-    "# vmax = 0.4\n",
-    "# figsize = (12, 12)\n",
-    "\n",
-    "# slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "49ed73ff-3056-4525-8fa5-68b3eedcd207",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# rai.plot_contours_by_structure(\n",
-    "#     grids=grids,\n",
-    "#     images=image_stack,\n",
-    "#     contours_by_structure=predicted_contours_by_structure[\"transverse\"],\n",
-    "#     orientation=\"transverse\",\n",
-    "#     slice_indices=slice_indices,\n",
-    "#     axis_limits=axis_limits,\n",
-    "#     structure_names=cfg[\"structures\"],\n",
-    "#     figsize=figsize,\n",
-    "#     vmin=vmin,\n",
-    "#     vmax=vmax,\n",
-    "# )"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "28b9f677-414d-4fb0-b279-ecff2c881487",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# for orientation in [\"coronal\", \"sagittal\"]:\n",
-    "#     predicted_contours_by_structure[orientation] = rai.masks_to_contours_by_structure(\n",
-    "#         grids=grids, \n",
-    "#         masks=predicted_masks, \n",
-    "#         structure_names=cfg[\"structures\"], \n",
-    "#         orientation=orientation,\n",
-    "#     )\n",
-    "#     rai.plot_contours_by_structure(\n",
-    "#         grids=grids,\n",
-    "#         images=image_stack,\n",
-    "#         contours_by_structure=predicted_contours_by_structure[orientation],\n",
-    "#         orientation=orientation,\n",
-    "#         slice_indices=slice_indices,\n",
-    "#         axis_limits=axis_limits,\n",
-    "#         structure_names=cfg[\"structures\"],\n",
-    "#         figsize=figsize,\n",
-    "#         vmin=vmin,\n",
-    "#         vmax=vmax,\n",
-    "#     )"
    ]
   }
  ],
