--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -228,6 +228,10 @@
    },
    "outputs": [],
    "source": [
+    "# TODO: Add in a refinement step based on points where there is uncertainty (ie artefact regions)\n",
+    "# * Collect min and max values for each pixel. Points with enough difference get further refined.\n",
+    "# * Consider adding in metal streak artefacts during training.\n",
+    "\n",
     "predicted_masks = rai.inference(\n",
     "    cfg=cfg,\n",
     "    models=models,\n",
