--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -43,8 +43,9 @@
    },
    "outputs": [],
    "source": [
+    "import pathlib\n",
     "from io import BytesIO\n",
-    "from zipfile import ZipFile\n",
+    "import zipfile\n",
     "import tqdm\n",
     "import numpy as np\n",
     "import skimage.measure\n",
@@ -152,7 +153,7 @@
     "# TODO: Save training, validation, and hold out uids within raicontours\n",
     "# Have this downloader be able to receive \"training\", \"validation\", or \"hold out\"\n",
     "# Have a random one be used per user.\n",
-    "image_paths, structure_path = rai.download_hnscc_example()\n",
+    "image_paths, structure_path, data_license_path, data_readme_path, rai_license_path = rai.download_hnscc_example()\n",
     "structure_path"
    ]
   },
@@ -163,31 +164,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sorted_image_series = rai.paths_to_sorted_image_series(paths=image_paths)"
+    "sorted_image_paths = rai.sort_dicom_image_paths(paths=image_paths)\n",
+    "\n",
+    "# Prune the images used just for this demo (makes final download size smaller)\n",
+    "selected_sorted_image_paths = sorted_image_paths[14:78]\n",
+    "\n",
+    "# Use the following to instead use the entire image stack:\n",
+    "# selected_sorted_image_paths = sorted_image_paths"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "72578be3-ebc3-4c66-a149-e454de7c9ad2",
+   "id": "8174748a-d598-4c01-8971-925022e12bd3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from rai.legacy.dicom._uid import generate_uid\n",
-    "\n",
-    "# common_uid = generate_uid()[0:-10]\n",
-    "\n",
-    "\n",
-    "# for i, ds in enumerate(sorted_image_series):\n",
-    "#     ds.ImagePositionPatient = np.round(ds.ImagePositionPatient, decimals=4).tolist()\n",
-    "#     ds.SliceLocation = ds.ImagePositionPatient[-1]\n",
-    "#     ds.SliceThickness = np.round(float(ds.SliceThickness), decimals=4)\n",
-    "#     ds.PixelSpacing = np.round(ds.PixelSpacing, decimals=4).tolist()\n",
-    "#     ds.file_meta.ImplementationClassUID = rai.RAI_CONTOURS_IMPLEMENTATION_CLASS_UID\n",
-    "#     ds.file_meta.ImplementationVersionName = rai.RAI_IMPLEMENTATION_VERSION_NAME\n",
-    "#     ds.SOPInstanceUID = f\"{common_uid}.{i}\"\n",
-    "    \n",
-    "# sorted_image_series[0]"
+    "sorted_image_series = [pydicom.dcmread(path) for path in selected_sorted_image_paths]"
    ]
   },
   {
@@ -272,43 +265,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f8583c07-63ba-4e59-afcc-2d3e55fd887d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# created_structure_ds.remove_private_tags()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "39d6ad72-5daa-40e0-a125-29d55f1be20f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# created_structure_ds.ROIContourSequence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36ae013a-77c0-411e-8a23-b14855e87715",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# sorted_image_series[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "779dbf42-9118-445e-9688-564b5e00d13a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_filename = \"RS-RAi.dcm\"\n",
+    "created_structure_path = pathlib.Path(\"RS-RAi.dcm\")\n",
     "\n",
-    "pydicom.dcmwrite(filename=structure_filename, dataset=created_structure_ds, write_like_original=False)"
+    "pydicom.dcmwrite(filename=created_structure_path, dataset=created_structure_ds, write_like_original=False)"
    ]
   },
   {
@@ -318,12 +281,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with ZipFile('results.zip', 'w') as results_zip:\n",
-    "    for path in image_paths:\n",
-    "        results_zip.write(path, path.name)\n",
+    "save_to_images_directory = selected_sorted_image_paths + [data_license_path, data_readme_path]\n",
+    "save_to_structure_directory = [rai_license_path, created_structure_path]\n",
     "\n",
-    "    results_zip.write(structure_filename)\n",
-    "    "
+    "with zipfile.ZipFile('results.zip', 'w', compression=zipfile.ZIP_DEFLATED) as results_zip:\n",
+    "    for path in save_to_images_directory:\n",
+    "        results_zip.write(path, f\"HNSCC/{path.name}\")\n",
+    "        \n",
+    "    for path in save_to_structure_directory:\n",
+    "        results_zip.write(path, f\"RAi/{path.name}\")"
    ]
   },
   {
@@ -341,14 +307,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a11fd844-077b-4abc-8a7f-10b4aa239eb3",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "8ae4a494-4dfe-4b11-a877-dba3ec29cea7",
    "metadata": {},
    "outputs": [],
@@ -360,7 +318,26 @@
    "id": "b881613d-1c98-4dc0-ad44-ff5b086e62d1",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "vmin = 0.22\n",
+    "vmax = 0.35\n",
+    "figsize = (8, 8)\n",
+    "\n",
+    "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
+    "\n",
+    "rai.plot_contours_by_structure(\n",
+    "    grids=grids,\n",
+    "    images=image_stack,\n",
+    "    contours_by_structure=predicted_contours_by_structure,\n",
+    "    orientation=\"transverse\",\n",
+    "    slice_indices=slice_indices,\n",
+    "    axis_limits=axis_limits,\n",
+    "    structure_names=cfg[\"structures\"],\n",
+    "    figsize=figsize,\n",
+    "    vmin=vmin,\n",
+    "    vmax=vmax,\n",
+    ")"
+   ]
   },
   {
    "cell_type": "code",
