fine tuning the point refinement

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -167,10 +167,10 @@
     "sorted_image_paths = rai.sort_dicom_image_paths(paths=image_paths)\n",
     "\n",
     "# Prune the images used just for this demo (makes final download size smaller)\n",
-    "selected_sorted_image_paths = sorted_image_paths[14:78]\n",
+    "# selected_sorted_image_paths = sorted_image_paths[14:78]\n",
     "\n",
     "# Use the following to instead use the entire image stack:\n",
-    "# selected_sorted_image_paths = sorted_image_paths"
+    "selected_sorted_image_paths = sorted_image_paths"
    ]
   },
   {
@@ -237,6 +237,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "9949b210-5f55-41c6-ac5f-64d779691c32",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# np.vstack(diff).T.tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8afcc553-9499-4892-aac5-91d78a646fe7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "215 - 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7c0cfc0-eee6-4200-bdc3-63e0ac9a2e8f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bd0d1aba-9044-4e65-a076-20202f0e6569",
    "metadata": {},
    "outputs": [],
@@ -247,6 +275,57 @@
     "    structure_names=cfg[\"structures\"],\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "74b08a19-b1f2-40a3-88e3-08b38213ad9c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vmin = 0.22\n",
+    "vmax = 0.35\n",
+    "figsize = (8, 8)\n",
+    "\n",
+    "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
+    "\n",
+    "rai.plot_contours_by_structure(\n",
+    "    grids=grids,\n",
+    "    images=image_stack,\n",
+    "    contours_by_structure=predicted_contours_by_structure,\n",
+    "    orientation=\"transverse\",\n",
+    "    slice_indices=slice_indices,\n",
+    "    axis_limits=axis_limits,\n",
+    "    structure_names=cfg[\"structures\"],\n",
+    "    figsize=figsize,\n",
+    "    vmin=vmin,\n",
+    "    vmax=vmax,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d520ec-d8c8-42b0-8049-51988f4859ec",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a135c395-d26c-44f3-a1a2-d6020411f239",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "729e6230-0fd7-4dcc-9220-c143df32a862",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -295,6 +374,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "575056d1-bb6f-4e46-b848-81197e531cb1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "170 - 85"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "fae51683-0cce-4c64-bb10-bc24ef1e36e6",
    "metadata": {},
    "outputs": [],
@@ -307,45 +396,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8ae4a494-4dfe-4b11-a877-dba3ec29cea7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "b881613d-1c98-4dc0-ad44-ff5b086e62d1",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "vmin = 0.22\n",
-    "vmax = 0.35\n",
-    "figsize = (8, 8)\n",
-    "\n",
-    "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
-    "\n",
-    "rai.plot_contours_by_structure(\n",
-    "    grids=grids,\n",
-    "    images=image_stack,\n",
-    "    contours_by_structure=predicted_contours_by_structure,\n",
-    "    orientation=\"transverse\",\n",
-    "    slice_indices=slice_indices,\n",
-    "    axis_limits=axis_limits,\n",
-    "    structure_names=cfg[\"structures\"],\n",
-    "    figsize=figsize,\n",
-    "    vmin=vmin,\n",
-    "    vmax=vmax,\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "84146656-abcf-45aa-a01a-b869233c5d2c",
-   "metadata": {},
+   "id": "acf41f8d-6b9c-4976-bb79-dfa54204ab4d",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
-   "source": []
+   "source": [
+    "127.5 + 27.5"
+   ]
   },
   {
    "cell_type": "code",
@@ -353,7 +419,9 @@
    "id": "72651ed6-f1f0-4c4e-b836-fa6b8535a70c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "255 - 6"
+   ]
   },
   {
    "cell_type": "code",
