rework the final pass

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -140,6 +140,44 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "3f2b82f8-d96e-4189-aa8b-a5d4bdf7febb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from rai.inference._weighting import create_inference_weighting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "39d6efdb-153f-4ce8-a3b5-2aa688323dff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighting = create_inference_weighting((64,64,64))\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(weighting[32,...,0], vmin=0, vmax=1)\n",
+    "plt.axis('equal')\n",
+    "print(np.min(weighting), np.mean(weighting), np.max(weighting))\n",
+    "\n",
+    "plt.figure()\n",
+    "plt.pcolormesh(weighting[16,...,0], vmin=0, vmax=1)\n",
+    "plt.axis('equal')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "23f6e405-6034-4d71-9413-4f9b03a982a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weighting.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "e53da7c8-a538-4a74-ab2e-861ede4bb1d8",
    "metadata": {
     "colab": {
@@ -230,7 +268,6 @@
     "    models=models,\n",
     "    image_stack=image_stack,\n",
     "    max_batch_size=10,\n",
-    "    step_size=32,\n",
     ")"
    ]
   },
@@ -242,16 +279,6 @@
    "outputs": [],
    "source": [
     "# np.vstack(diff).T.tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8afcc553-9499-4892-aac5-91d78a646fe7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "215 - 40"
    ]
   },
   {
