make contours_by_structure match the dicom file

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -144,7 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from rai.inference._weighting import create_inference_weighting"
+    "# from rai.inference._weighting import create_inference_weighting"
    ]
   },
   {
@@ -154,15 +154,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weighting = create_inference_weighting((64,64,64))\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(weighting[32,...,0], vmin=0, vmax=1)\n",
-    "plt.axis('equal')\n",
-    "print(np.min(weighting), np.mean(weighting), np.max(weighting))\n",
+    "# weighting = create_inference_weighting((64,64,64))\n",
+    "# plt.figure()\n",
+    "# plt.pcolormesh(weighting[32,...,0], vmin=0, vmax=1)\n",
+    "# plt.axis('equal')\n",
+    "# print(np.min(weighting), np.mean(weighting), np.max(weighting))\n",
     "\n",
-    "plt.figure()\n",
-    "plt.pcolormesh(weighting[16,...,0], vmin=0, vmax=1)\n",
-    "plt.axis('equal')"
+    "# plt.figure()\n",
+    "# plt.pcolormesh(weighting[16,...,0], vmin=0, vmax=1)\n",
+    "# plt.axis('equal')"
    ]
   },
   {
@@ -172,7 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weighting.shape"
+    "# weighting.shape"
    ]
   },
   {
@@ -315,7 +315,56 @@
     "figsize = (8, 8)\n",
     "\n",
     "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5d2dd373-7112-4fa9-9e22-9be5080e2fcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grids[1][1] - grids[1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ed6b186-036c-48bc-9925-b7c632def68e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx = grids[2][1] - grids[2][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ce077a9e-aeb9-490e-83b5-d635f8b121e7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dx / 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6f48fc3-b4c9-4305-a3d7-1dec168f7607",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grids[2][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6d520ec-d8c8-42b0-8049-51988f4859ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "rai.plot_contours_by_structure(\n",
     "    grids=grids,\n",
     "    images=image_stack,\n",
@@ -329,14 +378,6 @@
     "    vmax=vmax,\n",
     ")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d6d520ec-d8c8-42b0-8049-51988f4859ec",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -401,16 +442,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "575056d1-bb6f-4e46-b848-81197e531cb1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "170 - 85"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "fae51683-0cce-4c64-bb10-bc24ef1e36e6",
    "metadata": {},
    "outputs": [],
@@ -427,28 +458,6 @@
    "metadata": {},
    "outputs": [],
    "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "acf41f8d-6b9c-4976-bb79-dfa54204ab4d",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "127.5 + 27.5"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "72651ed6-f1f0-4c4e-b836-fa6b8535a70c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "255 - 6"
-   ]
   },
   {
    "cell_type": "code",
