threshold and simplification updating

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -287,7 +287,19 @@
    "id": "e7c0cfc0-eee6-4200-bdc3-63e0ac9a2e8f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "0.975 * 255"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "53617347-890f-4212-8d74-b49f6d432d45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "255 / 2"
+   ]
   },
   {
    "cell_type": "code",
@@ -295,13 +307,7 @@
    "id": "bd0d1aba-9044-4e65-a076-20202f0e6569",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
-    "    grids=grids, \n",
-    "    masks=predicted_masks, \n",
-    "    structure_names=cfg[\"structures\"],\n",
-    ")"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -314,48 +320,46 @@
     "vmax = 0.35\n",
     "figsize = (8, 8)\n",
     "\n",
-    "slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
+    "# slice_indices, axis_limits, centre_indices = rai.view_ranges_from_masks(grids, predicted_masks)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5d2dd373-7112-4fa9-9e22-9be5080e2fcf",
+   "id": "beec1c99-56b3-4720-ae6b-a9f6bdf4e129",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grids[1][1] - grids[1][0]"
+    "# def callback(fig, ax, i):\n",
+    "#     if i == 47:\n",
+    "#         print(i)\n",
+    "#         ax.tick_params(\n",
+    "#             axis='both',     \n",
+    "#             which='both',  \n",
+    "#             bottom=False,  \n",
+    "#             top=False,     \n",
+    "#             left=False,\n",
+    "#             right=False,\n",
+    "#             labelbottom=False,\n",
+    "#             labelleft=False\n",
+    "#         )\n",
+    "#         ax.get_legend().remove()\n",
+    "#         fig.tight_layout()\n",
+    "#         ax.margins(x=0, y=0)\n",
+    "#         ax.set_position([0, 0, 1, 1])\n",
+    "        \n",
+    "#         plt.savefig('image.png', bbox_inches='tight', pad_inches=0)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3ed6b186-036c-48bc-9925-b7c632def68e",
+   "id": "ea7adbaf-a775-41ef-b3ea-43e52914bc7c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dx = grids[2][1] - grids[2][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "ce077a9e-aeb9-490e-83b5-d635f8b121e7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dx / 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a6f48fc3-b4c9-4305-a3d7-1dec168f7607",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "grids[2][1]"
+    "from rai.display.animation import view_ranges_from_contours_by_structure\n"
    ]
   },
   {
@@ -365,6 +369,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "cfg = raicontours.get_config()\n",
+    "\n",
+    "predicted_contours_by_structure = rai.masks_to_contours_by_structure(\n",
+    "    cfg=cfg,\n",
+    "    grids=grids, \n",
+    "    masks=predicted_masks, \n",
+    "    structure_names=cfg[\"structures\"],\n",
+    ")\n",
+    "\n",
+    "slice_indices, axis_limits = view_ranges_from_contours_by_structure(predicted_contours_by_structure, buffer=20)\n",
+    "\n",
     "rai.plot_contours_by_structure(\n",
     "    grids=grids,\n",
     "    images=image_stack,\n",
@@ -376,6 +391,7 @@
     "    figsize=figsize,\n",
     "    vmin=vmin,\n",
     "    vmax=vmax,\n",
+    "    # callback=callback\n",
     ")"
    ]
   },
@@ -481,36 +497,37 @@
    },
    "outputs": [],
    "source": [
-    "# image_uids = [ds.SOPInstanceUID for ds in sorted_image_series]\n",
+    "image_uids = [ds.SOPInstanceUID for ds in sorted_image_series]\n",
     "\n",
+    "dicom_structures_to_plot = [\n",
+    "        'Lens', 'Eyes', 'R Optic Nerve', 'L Optic Nerve'\n",
+    "    ]\n",
     "\n",
-    "# align_map = {\n",
-    "#     \"Brain\": [TG263.Brain],\n",
-    "#     \"Brainstem\": [TG263.Brainstem],\n",
-    "#     \"Cochlea-Lt\": [TG263.Cochlea_L],\n",
-    "#     \"Cochlea-Rt\": [TG263.Cochlea_R],\n",
-    "#     \"Lacrimal-Lt\": [TG263.Glnd_Lacrimal_L],\n",
-    "#     \"Lacrimal-Rt\": [TG263.Glnd_Lacrimal_R],\n",
-    "#     \"Lens-Lt\": [TG263.Lens_L],\n",
-    "#     \"Lens-Rt\": [TG263.Lens_R],\n",
-    "#     \"Lung-Lt\": [TG263.Lung_L],\n",
-    "#     \"Lung-Rt\": [TG263.Lung_R],\n",
-    "#     \"Mandible\": [TG263.Bone_Mandible],\n",
-    "#     \"Optic-Nerve-Lt\": [TG263.OpticNrv_L],\n",
-    "#     \"Optic-Nerve-Rt\": [TG263.OpticNrv_R],\n",
-    "#     \"Orbit-Lt\": [TG263.Eye_L],\n",
-    "#     \"Orbit-Rt\": [TG263.Eye_R],\n",
-    "#     \"Parotid-Lt\": [TG263.Parotid_L],\n",
-    "#     \"Parotid-Rt\": [TG263.Parotid_R],\n",
-    "#     \"Spinal-Cord\": [TG263.SpinalCord],\n",
-    "#     \"Submandibular-Lt\": [TG263.Glnd_Submand_L],\n",
-    "#     \"Submandibular-Rt\": [TG263.Glnd_Submand_R],\n",
-    "# }\n",
-    "# structure_names = list(align_map.keys())\n",
-    "\n",
-    "# dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
-    "#     ds=structure_ds, image_uids=image_uids, structure_names=structure_names\n",
-    "# )"
+    "dicom_contours_by_structure = rai.dicom_to_contours_by_structure(\n",
+    "    ds=structure_ds, image_uids=image_uids, structure_names=dicom_structures_to_plot\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd61a089-aed7-4d87-88e3-c53bcf37adc1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rai.plot_contours_by_structure(\n",
+    "    grids=grids,\n",
+    "    images=image_stack,\n",
+    "    contours_by_structure=dicom_contours_by_structure,\n",
+    "    orientation=\"transverse\",\n",
+    "    slice_indices=slice_indices,\n",
+    "    axis_limits=axis_limits,\n",
+    "    structure_names=dicom_structures_to_plot,\n",
+    "    figsize=figsize,\n",
+    "    vmin=vmin,\n",
+    "    vmax=vmax,\n",
+    "    callback=callback,\n",
+    ")"
    ]
   },
   {
