--- a/prototyping/15-colab-demo.ipynb
+++ b/prototyping/15-colab-demo.ipynb
@@ -43,7 +43,7 @@
    "source": [
     "try:\n",
     "    from google.colab import output\n",
-    "    !pip install rai==0.2.0-dev7\n",
+    "    !pip install rai==0.2.0-dev8\n",
     "    \n",
     "except ModuleNotFoundError:\n",
     "    %load_ext autoreload\n",
@@ -417,18 +417,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b4147042-932a-44d8-9c38-1441f9156fdf",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "97994506-26b6-458e-8921-7c878df8bbb5",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fae51683-0cce-4c64-bb10-bc24ef1e36e6",
@@ -447,9 +435,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "rai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "rai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -461,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
