instructions for viewing the DICOM files

--- a/prototyping/15-colab-demo.ipynb
+++ b/prototyping/15-colab-demo.ipynb
@@ -5,7 +5,33 @@
    "id": "84ede6e0-1662-48b8-a96e-145d8efd2a89",
    "metadata": {},
    "source": [
-    "# RAi's Open Source Autocontouring Library"
+    "# RAi's Open Source Autocontouring Library\n",
+    "\n",
+    "https://github.com/RadiotherapyAI/rai"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f9d54fe-a51e-4dd8-b794-f42c0cf801ad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# RAi, machine learning solutions in radiotherapy\n",
+    "# Copyright (C) 2021-2022 Radiotherapy AI Holdings Pty Ltd\n",
+    "\n",
+    "# This program is free software: you can redistribute it and/or modify\n",
+    "# it under the terms of the GNU Affero General Public License as\n",
+    "# published by the Free Software Foundation, either version 3 of the\n",
+    "# License, or (at your option) any later version.\n",
+    "\n",
+    "# This program is distributed in the hope that it will be useful,\n",
+    "# but WITHOUT ANY WARRANTY; without even the implied warranty of\n",
+    "# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n",
+    "# GNU Affero General Public License for more details.\n",
+    "\n",
+    "# You should have received a copy of the GNU Affero General Public License\n",
+    "# along with this program.  If not, see <https://www.gnu.org/licenses/>."
    ]
   },
   {
@@ -182,8 +208,18 @@
    },
    "outputs": [],
    "source": [
-    "image_paths, structure_path, data_license_path, data_readme_path, rai_license_path = rai.download_hnscc_example()\n",
+    "image_paths, structure_path, data_license_path, data_readme_path, rai_license_path = rai.download_hnscc_example(\"data\")\n",
     "structure_path"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "383970e2-7627-41fd-aa4c-7199985d2e46",
+   "metadata": {},
+   "source": [
+    "Once the data above has downloaded, you should be able to see it within the Google colab data directory:\n",
+    "\n",
+    "![](./hnscc-data.png)"
    ]
   },
   {
@@ -417,15 +453,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f6ea5a64-d56a-4f8d-af31-7710a21d7e69",
+   "metadata": {},
+   "source": [
+    "## Viewing the DICOM files\n",
+    "\n",
+    "Here is a DICOM viewer. For instructions on how to use this viewer see the details within the section [\"Instructions for viewing the DICOM files\"](#Instructions-for-viewing-the-DICOM-files) at the bottom of this notebook."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fae51683-0cce-4c64-bb10-bc24ef1e36e6",
+   "id": "b01d6afd-4887-4082-ae5c-a02c1ae5b8ab",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Provide the following link to users to view the DICOM files\n",
+    "from IPython.display import IFrame\n",
+    "IFrame('https://dicom.radiotherapy.ai/local', width=1200, height=800)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5d1e9210-2848-459f-a515-9c71627d167a",
+   "metadata": {},
+   "source": [
+    "## Instructions for viewing the DICOM files\n",
     "\n",
-    "# https://dicom.radiotherapy.ai/local"
+    "We are now going to view these DICOM files. A DICOM viewer has been copied in above these instuctions within the section [\"Viewing the DICOM files\"](#Viewing-the-DICOM-files). To be able to view these DICOM files within that viewer the following steps are required:\n",
+    "\n",
+    "* Download the `results.zip`\n",
+    "* Extract it to a local directory\n",
+    "* Within the DICOM viewer at the bottom of this notebook click *load folders*\n",
+    "* Scroll down to the **RTSTRUCT** series on the left-hand panel\n",
+    "* Double-click on the **RTSTRUCT** series\n",
+    "* Scroll the CT scan images to the middle slices for viewing\n",
+    "\n",
+    "Screen shots of the above steps are given below.\n",
+    "\n",
+    "### Download `results.zip`\n",
+    "\n",
+    "Once the results zip file has been created, right click on `results.zip` within the Google Colab file browser and then click download:\n",
+    "\n",
+    "![](./download-results.png)\n",
+    "\n",
+    "### Loading into the viewer\n",
+    "\n",
+    "Once downloaded, extract them to a local directory. Then, within the viewer under the section [\"Viewing the DICOM files\"](#Viewing-the-DICOM-files), click load folders:\n",
+    "\n",
+    "![](./load-folders.png)\n",
+    "\n",
+    "### RTSTRUCT\n",
+    "\n",
+    "Scroll down to the bottom and double click on the RTSTRUCT series:\n",
+    "\n",
+    "![](./rtstruct.png)\n",
+    "\n",
+    "### Viewer control\n",
+    "\n",
+    "Scroll the mouse wheel to go to approximately the middle slice to view the contours. Click the mouse wheel to pan. Right click and drag to zoom.\n",
+    "\n",
+    "![image.png](middle-slice.png)"
    ]
   }
  ],
