add dicom viewer comment

--- a/prototyping/15-colab-demo.ipynb
+++ b/prototyping/15-colab-demo.ipynb
@@ -459,7 +459,7 @@
    "source": [
     "## Viewing the DICOM files\n",
     "\n",
-    "Here is a DICOM viewer. For instructions on how to use this viewer see the details within the section [\"Instructions for viewing the DICOM files\"](#Instructions-for-viewing-the-DICOM-files) at the bottom of this notebook."
+    "Once the cell below has run it will provide an interactive DICOM viewer. For instructions on how to use this viewer see the details within the section [\"Instructions for viewing the DICOM files\"](#Instructions-for-viewing-the-DICOM-files) at the bottom of this notebook."
    ]
   },
   {
