further inference notebook work

--- a/prototyping/13-more-structures.ipynb
+++ b/prototyping/13-more-structures.ipynb
@@ -205,10 +205,10 @@
     "sorted_image_paths = rai.sort_dicom_image_paths(paths=image_paths)\n",
     "\n",
     "# Prune the images used just for this demo (makes final download size smaller)\n",
-    "# selected_sorted_image_paths = sorted_image_paths[14:78]\n",
+    "selected_sorted_image_paths = sorted_image_paths[14:78]\n",
     "\n",
     "# Use the following to instead use the entire image stack:\n",
-    "selected_sorted_image_paths = sorted_image_paths"
+    "# selected_sorted_image_paths = sorted_image_paths"
    ]
   },
   {
@@ -280,6 +280,36 @@
    "source": [
     "# np.vstack(diff).T.tolist()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99f14534-c092-44c4-8930-f3a16260a32b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = cfg[\"structures\"].index(TG263.OpticChiasm)\n",
+    "\n",
+    "np.max(predicted_masks[..., i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7a11e3f2-52e3-487d-8fc1-25dbf2cde342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "np.min(predicted_masks[..., i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "72b2c545-b474-40d0-88f3-2992724778fa",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -526,7 +556,7 @@
     "    figsize=figsize,\n",
     "    vmin=vmin,\n",
     "    vmax=vmax,\n",
-    "    callback=callback,\n",
+    "    # callback=callback,\n",
     ")"
    ]
   },
