--- a/prototyping/15-colab-demo.ipynb
+++ b/prototyping/15-colab-demo.ipynb
@@ -523,9 +523,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "rai",
    "language": "python",
-   "name": "python3"
+   "name": "rai"
   },
   "language_info": {
    "codemirror_mode": {
@@ -537,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
