--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -996,7 +996,7 @@
     "y = activation(x).numpy()\n",
     "\n",
     "plt.plot(x, y)\n",
-    "plt.title('Relu Activiation')"
+    "plt.title('Relu Activation')"
    ]
   },
   {
