--- a/workshops/epsm-2022-ai-workshop.ipynb
+++ b/workshops/epsm-2022-ai-workshop.ipynb
@@ -414,7 +414,7 @@
    "source": [
     "### Library imports\n",
     "\n",
-    "Here are a set of library imports, from both the standard library and some libraries downloadable from PyPI. These are imported within namespaces so as not to variable and function name conflicts."
+    "Here are a set of library imports, from both the standard library and some libraries downloadable from PyPI. These are imported within namespaces to avoid variable and function name conflicts."
    ]
   },
   {
