add in validation check, and COI disclosure

--- a/prototyping/15-colab-demo.ipynb
+++ b/prototyping/15-colab-demo.ipynb
@@ -36,6 +36,16 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4bb2823d-aa06-4a09-b945-44ec4f93873c",
+   "metadata": {},
+   "source": [
+    "# Disclosure of Conflict of Interest\n",
+    "\n",
+    "Simon Biggs, the presenter of this workshop owns Radiotherapy AI which is building a Medical Device based on the open source library being presented within this workshop."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7b76833c-7285-48c2-b384-5743e5c3723a",
    "metadata": {},
    "source": [
@@ -67,13 +77,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "try:\n",
-    "    from google.colab import output\n",
-    "    !pip install rai==0.2.0-dev8\n",
-    "    \n",
-    "except ModuleNotFoundError:\n",
-    "    %load_ext autoreload\n",
-    "    %autoreload 2"
+    "!pip install rai==0.2.0-dev9"
    ]
   },
   {
@@ -146,7 +150,7 @@
    "source": [
     "import raicontours\n",
     "\n",
-    "from raicontours import TG263\n",
+    "from raicontours import TG263, dicom_utilisation\n",
     "\n",
     "raicontours.__version__"
    ]
@@ -254,6 +258,46 @@
    "outputs": [],
    "source": [
     "sorted_image_series = [pydicom.dcmread(path) for path in selected_sorted_image_paths]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77d4b226-8297-4a51-b9c7-b6b071f8f6c3",
+   "metadata": {},
+   "source": [
+    "# Verify that these images weren't used within model training"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9740477-d39d-4595-9bf6-c648701d037b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "utilisation = dicom_utilisation(sorted_image_series[0])\n",
+    "utilisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ad48767-3dd0-4ce2-bb63-43f35d78782a",
+   "metadata": {},
+   "source": [
+    "This image has been used within the \"validation set\". This means that even though this image set was kept out of the training loop itself, machine learning parameters may have been tweaked in order to improve the results on this image set. (They were).\n",
+    "\n",
+    "Keep this in mind, it means that results on this particular image set are potentially going to be more favourable than a completely unseen imaging dataset."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af9aad86-e398-43de-b6ca-3a18b2e2ea97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for ds in sorted_image_series:\n",
+    "    assert dicom_utilisation(ds) == utilisation"
    ]
   },
   {
@@ -523,9 +567,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "rai",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "rai"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -537,7 +581,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.6"
   }
  },
  "nbformat": 4,
